src/Korobi/WebBundle/Resources/assets/sass/korobi/irc/_logs.scss
@import url(//fonts.googleapis.com/css?family=Source+Code+Pro:400,700);

.logs {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 1em;
  border-radius: 3px;
  display: table;

  .line {
    display: table-row;
    font-weight: 400;
    font-family: 'Source Code Pro', monospace;
    @include transition(0.25s all);

    &.highlighted {
      font-weight: bold;
      background-color: rgba(255, 10, 10, 0.2);
    }

    & > span {
      display: table-cell;
    }

    .nick {
      text-align: right;
      padding: 0 10px;
      border-right: 1px solid #333; // TODO Don't hardcode colors?

      &.owner:before    { content: '~'; color: nth($irc-colors,  4); }
      &.admin:before    { content: '&'; color: nth($irc-colors, 11); }
      &.operator:before { content: '@'; color: nth($irc-colors,  9); }
      &.half_op:before  { content: '%'; color: nth($irc-colors, 13); }
      &.voice:before    { content: '+'; color: nth($irc-colors,  8); }
    }

    .message {
      padding-left: 7px;
      word-break: break-all;
    }
  }

  .js-hl .fa {
    cursor: pointer;
  }

  // Light theme
  body.light & {
    background-color: #ddd;

    .line.highlighted {
      background-color: rgba(255, 239, 0, 0.75);
    }
  }
}

